--- a/views/config.ejs
+++ b/views/config.ejs
@@ -43,6 +43,20 @@
                             <label >Threshold</label>
                             <input type="text" class="form-control" id="machineThreshold">
                         </div>
+                        <div class="dropdown-divider"></div>
+                        <!-- List of Measurement instances -->
+                        <div class="form-group" id="">
+                            <table class="table table-bordered table-hover" id="instancesModalTable">
+                                <thead>
+                                <tr>
+                                    <th scope="col">Measurement</th>
+                                    <th scope="col">Instance</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                             <button type="submit" class="btn btn-primary">Save</button>
