--- a/views/config.ejs
+++ b/views/config.ejs
@@ -120,7 +120,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/javascripts/utils-config.js"></script>
 <script type='text/javascript'>
-    var analyses =<%-JSON.stringify(analyses)%>
+    var analyses =<%-JSON.stringify(analyses)%>;
+    var projectId =<%-JSON.stringify(projectId)%>;
 </script>
 </body>
 </html>
